broke a new layout out to separate pages with right nav from those without. Fixed css word wrapping for gists

--- a/css/gist.css
+++ b/css/gist.css
@@ -1,3 +1,9 @@
+div.gist-highlight pre {
+  white-space: pre;
+  word-break: normal;
+  word-wrap: normal;	
+}
+
 .gist{
   margin: 15px 0 !important;
 }
